# KubePilot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml  requirements.txt
app/: config.py  main.py  models.py
app/api/: admin.py  auth.py  query.py
app/core/: graph.py  state.py
app/middleware/: admin.py  admmin.py  auth.py  rate_limiter.py
app/security/: content_moderation.py  input_guard.py  input_restructuring.py  output_validator.py  spotlighting.py  system_prompt.py  token_budget.py
app/services/: crag.py  doc_cache_service.py  document_processor.py  embedding_service.py  hyde.py  llm_service.py  query_cache_service.py  rag_service.py  reranking.py  router_service.py  self_reflective.py  sparse_vector_service.py  sql_service.py  vector_store.py  web_search.py
app/storage/: storage_backend.py
eval/: RESULTS.md  invokers.py  post_checks.py  profiles.py  ragas_adapter.py  reporting.py  run_RAGAS.py  run_ragas.py  schema.py  seed_questions.yaml
eval/results/: 20260610T174801Z_all.json  20260610T174819Z_all.json
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/chat/: types.ts  (+1 more)
notebooks/: crag.ipynb  hybrid_search.ipynb  hyde.ipynb  reranker.ipynb  srag.ipynb  text2sql.ipynb
scripts/: seed_db.py  serve.py  streamlit_app.py
seed/: generate_seed.py
seed/migrations/: 001_create_user.sql  003_seed_k8s_ops.sql
(+14 files in other folders)
