[project]
name = "enterprise-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "boto3>=1.43.19",
    "docling>=2.96.1",
    "faker>=40.19.1",
    "fastapi>=0.136.3",
    "fastembed>=0.8.0",
    "httpx>=0.28.1",
    "langchain>=1.3.2",
    "langgraph>=1.2.2",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langsmith>=0.8.8",
    "llm-guard>=0.0.2",
    "mypy>=2.1.0",
    "numpy>=2.4.6",
    "openai>=2.39.0",
    "pandas>=3.0.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "pypdf>=6.12.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.30",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.18.0",
    "ragas>=0.3.1",
    "rank-bm25>=0.2.2",
    "reportlab>=4.5.1",
    "ruff>=0.15.15",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.25",
    "tiktoken>=0.13.0",
    "torch>=2.12.0",
    "transformers>=5.9.0",
    "upstash-redis>=1.7.0",
    "uvicorn[standard]>=0.48.0",
    "vanna[openai,postgres]>=2.0.2",
    "voyageai>=0.3.7",
]

[tool.uv]
# xformers requires CUDA/OpenMP which Apple clang doesn't support.
# It's a GPU optimization dep pulled in by llm-guard — not needed on macOS/MPS.
override-dependencies = [
    "xformers; sys_platform != 'darwin'",
]
